--- a/PadelCourtBooker/PadelCourtBooker.App/App.xaml
+++ b/PadelCourtBooker/PadelCourtBooker.App/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PadelCourtBooker.App"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+  <Application.Resources>
+    <FontFamily x:Key="Digital7MonoFont">pack://application:,,,/Fonts/#Digital-7 Mono</FontFamily>
+  </Application.Resources>
 </Application>
