--- a/PadelCourtBooker/PadelCourtBooker.App/MainWindow.xaml
+++ b/PadelCourtBooker/PadelCourtBooker.App/MainWindow.xaml
@@ -33,6 +33,9 @@
       <MenuItem Header="Settings">
         <MenuItem Header="Credentials" Command="{Binding CmdEnterCredentials}"></MenuItem>
       </MenuItem>
+      <MenuItem Header="Tools">
+        <MenuItem Header="Q-Padel reservations" Command="{Binding CmdLaunchQPadelReservationsPage}"></MenuItem>
+      </MenuItem>
     </Menu>
 
     <Grid>
