send push notification when a court is booked

--- a/PadelCourtBooker/PadelCourtBooker.App/MainWindow.xaml
+++ b/PadelCourtBooker/PadelCourtBooker.App/MainWindow.xaml
@@ -36,6 +36,10 @@
       <MenuItem Header="Tools">
         <MenuItem Header="Q-Padel reservations" Command="{Binding CmdLaunchQPadelReservationsPage}"></MenuItem>
       </MenuItem>
+
+      <MenuItem Header="Developer">
+        <MenuItem Header="Test Push Notification" Command="{Binding CmdTestPushNotification}"></MenuItem>
+      </MenuItem>
     </Menu>
 
     <Grid>
